Docker 1.0